Bug 466407 - History menu often shows duplicated items, r=dietrich